Login page and alternate nav layout first sketch.

--- a/client/scss/styleLight.scss
+++ b/client/scss/styleLight.scss
@@ -24,6 +24,7 @@ Goldstone user settings interface.
 
 $theme: light;
 
+@import "login";
 @import "main";
 @import "bootstrap-submenu-shim";
 @import "bootstrap_dark_override";
