--- a/goldstone/templates/base.html
+++ b/goldstone/templates/base.html
@@ -99,6 +99,35 @@
                    <!-- dynamically inserted by addonMenuView -->
                 </li>
             </ul>
+
+            <!-- logged in user dropdown -->
+            <div class="pull-right btn-group">
+                <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+                user@email.com
+                <span class="caret"></span>
+                </a>
+                <ul class="dropdown-menu">
+                  <div class="row">
+                      <div class="sm-col-4">
+                        <li><a href="#">settings</a></li>
+                      </div>
+                      <div class="sm-col-4">
+                        <li><a href="#">help</a></li>
+                      </div>
+                  </div>
+                <!-- <li class="divider"></li> -->
+                  <div class="row">
+                      <div class="sm-col-4">
+                            <li><a href="#">googlle groups</a></li>
+                      </div>
+                      <div class="sm-col-4">
+                            <li><a href="#">github issues</a></li>
+                      </div>
+                  </div>
+                </ul>
+            </div>
+            <!-- end logged in user dropdown -->
+
             <!-- logout icon -->
             <ul class="nav navbar-nav navbar pull-right">
                 <h4>
@@ -144,6 +173,7 @@
 
             <div class="global-range-refresh-container">
             </div> <!-- global-range-refresh-container -->
+
 
         </div> <!-- navbar-collapse -->
     </div> <!-- container-fluid -->
