--- a/client/scss/styleDark.scss
+++ b/client/scss/styleDark.scss
@@ -24,6 +24,7 @@ Goldstone user settings interface.
 
 $theme: dark;
 
+@import "login";
 @import "main";
 @import "bootstrap-submenu-shim";
 @import "bootstrap_dark_override";
